# versatus

./: .gitignore  .gitmodules  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  build_log.txt  rust-toolchain.toml  shell.nix  tags
.cargo-husky/hooks/: pre-commit  pre-merge  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_outline.yml
.github/workflows/: ci-publish.yml  release-versa-wasm.yml  run_tests.yml  rust.yaml
accountable/: Cargo.toml
accountable/src/: accountable.rs  lib.rs
benches/: Cargo.toml  README.md  poc.rs
benches/src/: main.rs
block/: Cargo.toml
block/src/: block.rs  header.rs  invalid.rs  lib.rs
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs
bonsaidb/: storage-id
bonsaidb/_admin/: _transactions  collection.bonsaidb.databases.nebari  view.bonsaidb.databases.by-name.document-map.nebari  view.bonsaidb.databases.by-name.nebari
claim/: Cargo.toml
claim/src/: claim.rs  lib.rs
claim_concept/: Cargo.toml
claim_concept/src/: claim.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs  result.rs
cli/src/commands/: mod.rs  node.rs
cli/tests/: node_cli.rs
commands/: Cargo.toml
commands/src/: command.rs
crates/accountable/: Cargo.toml
crates/block/: Cargo.toml
crates/block/src/: block.rs  convergence_block.rs  error.rs  genesis.rs  header.rs  invalid.rs  lib.rs  proposal_block.rs  types.rs  vesting.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: block_integrity_checker.rs  block_processor.rs  blockchain.rs  lib.rs  result.rs  sequence_integrity_checker.rs  state_db.rs  state_sync_reporter.rs
crates/claim/: Cargo.toml
crates/claim_concept/: Cargo.toml
crates/claim_concept/benches/: my_benchmark.rs
crates/claim_concept/src/: claim.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs  result.rs
crates/cli/src/commands/: mod.rs  node.rs  utils.rs  wallet_commands.rs
crates/cli/src/commands/config/: mod.rs
crates/cli/src/commands/dev/: mod.rs  run.rs
crates/cli/src/commands/faucet/: mod.rs
crates/cli/src/commands/keygen/: mod.rs
crates/cli/src/commands/node/: info.rs  mod.rs  run.rs
crates/cli/src/commands/wallet/: get.rs  get_mempool.rs  info.rs  mod.rs  new.rs  transfer.rs
crates/cli/tests/: node_cli.rs  whitelist.json
crates/cli/tests/whitelist_data/: whitelist.json
crates/commands/: Cargo.toml
crates/commands/src/: command.rs
crates/compute_agent/: Cargo.toml
crates/compute_agent/src/: cli.rs  main.rs
crates/compute_agent/src/commands/: mod.rs
crates/compute_agent/src/commands/compute_job/: job_status.rs  mod.rs  queue_job.rs
crates/compute_agent/src/commands/daemon/: mod.rs
crates/compute_agent/src/commands/request/: mod.rs
crates/compute_agent/src/commands/status/: mod.rs
crates/compute_runtime/: Cargo.toml
crates/compute_runtime/src/: kontain.rs  kontain_wasm.rs  lib.rs  oci.rs  oci_runc.rs  oci_wasm.rs  runtime.rs  tests.rs  youki.rs
crates/consensus/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: command_router.rs  lib.rs
crates/count_min_sketch/: Cargo.toml
crates/dkg_engine/: Cargo.toml
crates/dkg_engine/src/: dkg.rs  lib.rs  test_utils.rs
crates/dkg_engine/src/types/: config.rs  mod.rs
crates/ev_mem_pool/: Cargo.toml
crates/events/: Cargo.toml
crates/events/src/: event.rs  event_data.rs  events.rs  lib.rs
crates/executor/: Cargo.toml
crates/faucet/: Cargo.toml
crates/faucet/src/: faucet.rs  lib.rs
crates/grpc/: Cargo.toml
crates/grpc/data/tls/: ca.pem  client1.key  client1.pem
crates/grpc/src/: client.rs  server.rs
crates/internal_rpc/: Cargo.toml  instructions.md
crates/job_pool/: Cargo.toml
crates/job_scheduler/: Cargo.toml
crates/ledger/: Cargo.toml
crates/lr_trie/: Cargo.toml
crates/lrdb/: Cargo.toml
crates/mempool/: Cargo.toml
crates/messages/: Cargo.toml
crates/metric_exporter/: Cargo.toml
crates/miner/: Cargo.toml
crates/network/: Cargo.toml
crates/node/: Cargo.toml
crates/noncing/: Cargo.toml
crates/ownable/: Cargo.toml
crates/platform/: Cargo.toml
crates/pool/: Cargo.toml
crates/primitives/: Cargo.toml
crates/quorum/: Cargo.toml
crates/reward/: Cargo.toml
crates/route/: Cargo.toml
dkg_engine/: Cargo.toml
docs/: CommandReferenceWasm.md  DevelopingSmartContracts.md  GettingStarted.md
events/: Cargo.toml
events/src/: events.rs
examples/: cgroup_stats.rs  infinite_recursion.rs  minichain.rs  multichain.rs  web3-pkg.rs
gd_udp/: Cargo.toml
gd_udp/src/: gd_udp.rs  lib.rs
gossipsub/: Cargo.toml
ledger/: Cargo.toml
ledger/src/: ledger.rs  lib.rs
lr_trie/: Cargo.toml
lrdb/: Cargo.toml
lrdb/src/: lib.rs  lr_db.rs  result.rs  vrrb_db.rs
mempool/: Cargo.toml
mempool/src/: error.rs  lib.rs  mempool.rs  tests.rs  txn_validator.rs
messages/: Cargo.toml
miner/: Cargo.toml
miner/src/: lib.rs  miner.rs
minichain/: Cargo.toml
minichain/src/: main.rs
network/: Cargo.toml
network/src/: components.rs  lib.rs  message.rs  protocol.rs
network/src/types/: config.rs
node/: Cargo.toml
noncing/: Cargo.toml
ownable/: Cargo.toml
pool/: Cargo.toml
quorum/: Cargo.toml
quorum/src/: dummyChildBlock.rs  dummyNode.rs  election.rs  extra.rs  lib.rs  quorum.rs
reward/: Cargo.toml
service/: Cargo.toml
signer/: Cargo.toml
signer/src/: signer.rs
signer/src/types/: mod.rs
state/: Cargo.toml
state/src/: lib.rs  state.rs  state_trie.rs
state_trie/: Cargo.toml
state_trie/src/: error.rs  lib.rs
statistics/: per_epoch_avg_block_reward.json  supply.ipynb
storage/: Cargo.toml
streamer/: Cargo.toml
telemetry/: Cargo.toml
telemetry/src/: lib.rs  subscriber.rs
tx_trie/: Cargo.toml
txn/: Cargo.toml
updateable/: Cargo.toml
validator/: Cargo.toml
validator/src/: lib.rs  mempool_processor.rs  txn_validator.rs  validator.rs  validator_unit.rs
verifiable/: Cargo.toml
vrrb-config/: Cargo.toml
vrrb_cli/: Cargo.toml
vrrb_dht/: Cargo.toml
vrrb_gui/: Cargo.toml
vrrb_lib/: Cargo.toml
vrrb_vrf/: Cargo.toml
wallet/: Cargo.toml
(+802 files in other folders)
