[package]
name = "versatus"
description = "Rust implementation of Versatus protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
default-run = "versa"

[workspace.package]
version = "0.1.0"
authors = ["Versatus Labs <info@versatus.io>"]
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"

# Note: These should probably be specified in their respective Cargo toml files
[[bin]]
name = "versa"
path = "crates/cli/src/main.rs"

[[bin]]
name = "versa-wasm"
path = "crates/wasm_cli/src/main.rs"

[[bin]]
name = "versa-compute"
path = "crates/compute_agent/src/main.rs"

[[bin]]
name = "versa-storage"
path = "crates/storage_agent/src/main.rs"

[workspace]
resolver = "2"
members = [
  "crates/primitives",
  "crates/events",
  "crates/faucet",
  "crates/consensus",
  "crates/consensus/quorum",
  "crates/consensus/signer",
  "crates/consensus/job_pool",
  "crates/consensus/job_scheduler",
  "crates/consensus/vrrb_vrf",
  "crates/vrrb_core",
  "crates/cli",
  "crates/internal_rpc",
  "crates/vrrb_config",
  "crates/vrrb_rpc",
  "crates/block",
  "crates/miner",
  "crates/wallet",
  "crates/mempool",
  "crates/node",
  "crates/storage",
  "crates/storage/vrrbdb",
  "crates/storage/utils",
  "crates/telemetry",
  "crates/utils",
  "crates/vrrb_http",
  "crates/wasm_loader",
  "crates/wasm_cli",
  "crates/wasm_runtime",
  "crates/compute_agent",
  "crates/storage_agent",
  "crates/service_config",
  "crates/web3_pkg",
  "crates/platform",
  "crates/metric_exporter",
]

[workspace.dependencies]
# NOTE: Internal crates 
cli = { path = "crates/cli" }
internal_rpc = { path = "crates/internal_rpc" }
node = { path = "crates/node" }
primitives = { path = "crates/primitives" }
vrrb_core = { path = "crates/vrrb_core" }
vrrb_config = { path = "crates/vrrb_config" }
vrrb_rpc = { path = "crates/vrrb_rpc" }
faucet = { path = "crates/faucet" }
block = { path = "crates/block" }
miner = { path = "crates/miner" }
wallet = { path = "crates/wallet" }
mempool = { path = "crates/mempool" }
network = { path = "crates/network" }
telemetry = { path = "crates/telemetry" }
validator = { path = "crates/validator" }
utils = { path = "crates/utils" }
events = { path = "crates/events" }

storage = { path = "crates/storage" }
vrrbdb = { path = "crates/storage/vrrbdb" }
storage_utils = { path = "crates/storage/utils" }

consensus = { path = "crates/consensus" }
quorum = { path = "crates/consensus/quorum" }
signer = { path = "crates/consensus/signer" }
dkg_engine = { path = "crates/consensus/dkg_engine" }
reward = { path = "crates/consensus/reward" }
job_pool = { path = "crates/consensus/job_pool" }
job_scheduler = { path = "crates/consensus/job_scheduler" }
vrrb_vrf = { path = "crates/consensus/vrrb_vrf" }
vrrb_http = { path = "crates/vrrb_http" }
wasm_loader = { path = "crates/wasm_loader" }
wasm_runtime = { path = "crates/wasm_runtime" }
service_config = { path = "crates/service_config" }
web3_pkg = { path = "crates/web3_pkg" }
platform = { path = "crates/platform" }
metric_exporter = { path = "crates/metric_exporter" }

# NOTE: Github crates
patriecia = { git = "https://github.com/versatus/patriecia" }
trecho = { git = "https://github.com/vrrb-io/trecho" }
theater = { git = "https://github.com/vrrb-io/theater" }
hbbft = { git = "https://github.com/vrrb-io/hbbft", branch = "master" }
bulldag = { git = "https://github.com/vrrb-io/bulldag", branch = "main" }
kademlia-dht = { git = "https://github.com/vrrb-io/kademlia-dht-rs" }
rendezvous_dht = { git = "https://github.com/vrrb-io/rendezvous_dht" }
messr = { git = "https://github.com/vrrb-io/messr" }
decentrust = { git = "https://github.com/vrrb-io/decentrust", branch = "main" }
dyswarm = { git = "https://github.com/vrrb-io/dyswarm" }
integral-db = { git = "https://github.com/versatus/integral-db" }

# NOTE: External crates
secp256k1 = { version = "0.25", features = [
  "rand",
  "serde",
  "bitcoin_hashes",
  "global-context",
] }
bitmask-enum = "2.2"
clap = { version = "3.2", features = ["derive"] }
assert_cmd = "2.0"
sha256 = "1.1"
rand = { version = "0.8", features = ["std"] }
bytebuffer = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
blake3 = "0.3"
log = "0.4"
pickledb = "0.5"
tokio = { version = "1.21", features = ["full"] }
hex = "0.4"
thiserror = "1.0"
ritelinked = { version = "0.3", features = ['serde'] }
bincode = "1.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
poem = "1.3"
public-ip = "0.2"
anyhow = "1.0"
async-trait = "0.1"
derive_builder = "0.12"
jsonrpsee = { version = "0.16", features = [
  "macros",
  "client-core",
  "server-core",
  "server",
  "http-client",
  "ws-client",
] }
bytes = "1.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
sha2 = "0.10"
sha3 = "0.10"
chrono = "0.4"
lru_time_cache = "0.11"
strum_macros = "0.21"
rocksdb = "0.19"
strum = "0.21"
rayon = "1.6"
config = "0.13"
serial_test = "0.9"
left-right = "0.11"
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5"
criterion = { version = "0.5", features = ["stable", "async_futures"] }
ethereum-types = "0.13"
concurrent-queue = "2.0"
crossbeam-channel = "0.5"
once_cell = "1.16"
waker-fn = "1.1"
num_cpus = "1.14"
rand_chacha = "0.3"
format-bytes = "0.3"
thread_local = "1.1"
tabled = "0.10"
axum = "0.5"
axum-server = { version = "0.4", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }
cuckoofilter = "0.5"
indexmap = "1.9"
raptorq = "1.7"
dirs = "4.0"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "registry",
  "env-filter",
  "tracing-log",
  "json",
] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
dashmap = "5.4"
timer = "0.2"
laminar = "0.5"
futures = { version = "0.3", features = ["thread-pool"] }
qp2p = "0.30"
wiremock = "0.5"
url = "2.3"
bs58 = "0.4"
ring = "0.16"
prost = "0.11"
pbjson = "0.5"
pbjson-types = "0.5"
tonic = { version = "0.9", features = ["gzip"] }
tonic-reflection = "0.9"
maglev = "0.2"
tokio-util = { version = "0.7", features = ["rt"] }
wasmer = "4.0"
wasmer-middlewares = "4.0"
wasmer-wasix = "0.9"
wasmer-wasix-types = "0.9"
wasmer-vm = "4.0"
wasmparser = "0.107"
ipfs-api = "0.17"
rustls = "0.21"
rustls-pemfile = "1.0"
hyper-rustls = { version = "0.24", features = ["acceptor"] }

[[bench]]
name = "poc"
harness = false
