[workspace.package]
authors = ["Versatus Labs <info@versatus.io>"]
homepage = "https://versatus.io"
repository = "https://github.com/versatus/versatus"
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace]
members = [
  "crates/block",
  "crates/cli",
  "crates/compute_agent",
  "crates/compute_runtime",
  "crates/consensus",
  "crates/consensus/job_pool",
  "crates/consensus/job_scheduler",
  "crates/consensus/quorum",
  "crates/consensus/signer",
  "crates/consensus/vrrb_vrf",
  "crates/events",
  "crates/faucet",
  "crates/internal_rpc",
  "crates/mempool",
  "crates/metric_exporter",
  "crates/miner",
  "crates/node",
  "crates/platform",
  "crates/primitives",
  "crates/service_config",
  "crates/storage",
  "crates/storage/utils",
  "crates/storage/vrrbdb",
  "crates/telemetry",
  "crates/utils",
  "crates/vrrb_config",
  "crates/vrrb_core",
  "crates/vrrb_http",
  "crates/vrrb_rpc",
  "crates/wallet",
  "crates/wasm_cli",
  "crates/wasm_loader",
  "crates/wasm_runtime",
  "crates/web3_pkg",
  "crates/storage_agent",
]
exclude = ["benches"]
resolver = "2"

[workspace.dependencies]
# Internal crates
block = { path = "crates/block" }
events = { path = "crates/events" }
faucet = { path = "crates/faucet" }
internal_rpc = { path = "crates/internal_rpc" }
job_pool = { path = "crates/consensus/job_pool" }
job_scheduler = { path = "crates/consensus/job_scheduler" }
mempool = { path = "crates/mempool" }
miner = { path = "crates/miner" }
node = { path = "crates/node" }
platform = { path = "crates/platform" }
primitives = { path = "crates/primitives" }
quorum = { path = "crates/consensus/quorum" }
reward = { path = "crates/consensus/reward" }
service_config = { path = "crates/service_config" }
signer = { path = "crates/consensus/signer" }
storage = { path = "crates/storage" }
storage_utils = { path = "crates/storage/utils" }
telemetry = { path = "crates/telemetry" }
utils = { path = "crates/utils" }
validator = { path = "crates/validator" }
vrrbdb = { path = "crates/storage/vrrbdb" }
vrrb_config = { path = "crates/vrrb_config" }
vrrb_core = { path = "crates/vrrb_core" }
vrrb_http = { path = "crates/vrrb_http" }
vrrb_rpc = { path = "crates/vrrb_rpc" }
vrrb_vrf = { path = "crates/consensus/vrrb_vrf" }
wallet = { path = "crates/wallet" }
wasm_loader = { path = "crates/wasm_loader" }
wasm_runtime = { path = "crates/wasm_runtime" }
web3_pkg = { path = "crates/web3_pkg" }
metric_exporter = { path = "crates/metric_exporter" }

# Github crates
bulldag = { git = "https://github.com/versatus/bulldag" }
dyswarm = { git = "https://github.com/versatus/dyswarm" }
hbbft = { git = "https://github.com/versatus/hbbft" }
integral-db = { git = "https://github.com/versatus/integral-db" }
kademlia-dht = { git = "https://github.com/versatus/kademlia-dht-rs" }
messr = { git = "https://github.com/versatus/messr" }
patriecia = { git = "https://github.com/versatus/patriecia" }
rendezvous_dht = { git = "https://github.com/versatus/rendezvous_dht" }
theater = { git = "https://github.com/versatus/theater" }


# External crates
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.5", features = ["macros"] }
bincode = "1.3"
bitmask-enum = "2.2"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
crossbeam-channel = "0.5"
cuckoofilter = "0.5"
derive_builder = "0.12"
ethereum-types = "0.13"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
indexmap = "1.9"
jsonrpsee = { version = "0.16", features = [
  "macros",
  "client-core",
  "server-core",
  "server",
  "http-client",
  "ws-client",
] }
lazy_static = "1.4"
lru_time_cache = "0.11"
once_cell = "1.16"
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["process"] }
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
rayon = "1.6"
reqwest = { version = "0.11", features = ["rustls-tls"] }
ritelinked = { version = "0.3", features = ["serde"] }
secp256k1 = { version = "0.25", features = [
  "rand",
  "serde",
  "bitcoin_hashes",
  "global-context",
] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serial_test = "0.9"
sha2 = "0.10"
sha256 = "1.1"
thiserror = "1.0"
tokio = { version = "1.21", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
wasmer = "4.0"
wasmer-wasix = "0.9"
wasmer-wasix-types = "0.9"
maglev = "0.2"
hyper-rustls = { version = "0.24", features = ["acceptor"] }
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
