[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
runtime = { path = "../node/runtime" }
node = { path = "../node/core" }
telemetry = { path = "../telemetry" }
commands = { path = "../commands" }
storage = { path = "../storage" }
anyhow = "1.0.64"
tracing = "0.1.36"
thiserror = "1.0.34"
