[package]
name = "gd_udp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.6", features = ["std"]}
hex = "*"
sha256 = "1.0.2"
blake3 = "0.3.8"
bytebuffer = "0.2.1"
tokio = {version = "1.12.0", features = ["full"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
public-ip = "0.2.1"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
secp256k1 = {version = "0.20.2", features = ["rand"]}
log = "0.4.14"
ritelinked = {version = "0.3.2", features = [ 'serde' ]}
commands = { path = "../commands" }
messages = { path = "../messages" }