[package]
name = "lrdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmap = "5.0.2"
evmap-derive = "0.2.0"
linked-hash-map = "0.5.6"
sha2 = "0.10.2"
secp256k1 = {version = "0.24.0", features = ["global-context", "rand"]}
serde = {version = "1.0.142", features = ["derive"]}
bincode = "1.3.3"

[dev-dependencies]
rand = "0.8.5"