[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmap = "10.0.2"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
secp256k1 = "0.24.0"
txn = { path="../txn"}
left-right = "0.11.5"
threadpool = "1.8.1"
indexmap = "1.9.1"
fxhash = "0.2.1"
