[package]
name = "miner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reward = { path = "../reward" }
state = { path = "../state" }
block = { path = "../block" }
pool = { path = "../pool" }
txn = { path = "../txn" }
claim = { path = "../claim" }
validator = { path = "../validator" }
verifiable = { path = "../verifiable" }
noncing = { path = "../noncing" }
ritelinked = {version = "0.3.2", features = [ 'serde' ]}
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
sha256 = "1.0.2"