[package]
name = "minichain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
telemetry = { workspace = true }
anyhow = { workspace = true }
node = { workspace = true }
vrrb_config = { workspace = true }
