[package]
name = "quorum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = { path = "../blockchain" }
state = { path = "../state" }
block = { path = "../block" }
vrrb_vrf = { path = "../vrrb_vrf" }
rand_chacha = "0.3.1"
hex = "0.4.3"
lr_trie = {path = "../lr_trie"}
miner = {path = "../miner"}
claim = {path = "../claim"}
indexmap = "1.9.1"