[package]
name = "signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbbft = "0.1.1"
thiserror = "1.0.32"

serde = "1.0.144"

primitives = { path = "../primitives" }
node = { path = "../node/core" }
dkg_engine = { path = "../dkg_engine" }