[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritelinked = {version = "0.3.2", features = [ 'serde' ]}
sha256 = "1.0.2"
log = "0.4.14"
serde_json = "1.0.64"
hex = "*"
serde = { version = "1.0.101", features = ["derive"] }
claim = { path = "../claim" }
verifiable = { path = "../verifiable" }
ledger = { path = "../ledger" }
accountable = { path = "../accountable" }
ownable = { path = "../ownable" }
noncing = { path = "../noncing" }
updateable = { path = "../updateable" }
reward = { path = "../reward" }
