[package]
name = "state_trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
left-right = "0.11.5"
rs_merkle = { git = "https://github.com/vrrb-io/rs-merkle", branch = "master" }
patriecia = { git = "https://github.com/vrrb-io/patriecia", branch = "main" }
lr_trie = { path = "../lr_trie" }
keccak-hash = "0.9.0"
hex = "0.4.3"
