[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.33"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = [
    "fmt",
    "registry",
    "env-filter",
    "tracing-log",
    "json",
] }
