[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
txn = { path = "../txn" }
pool = { path = "../pool" }
state = { path = "../state" }
verifiable = { path = "../verifiable" }