[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
bytebuffer = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
secp256k1 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
ritelinked = { workspace = true }
reward = { workspace = true }
primitives = { workspace = true }
vrrb_core = { workspace = true }
telemetry = { workspace = true }
utils = { workspace = true }
vrrb_vrf = { workspace = true }
bulldag = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
ethereum-types = { workspace = true }
hbbft = { workspace = true } 
signer = { workspace = true }
