[package]
name = "block"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bulldag = { workspace = true }
chrono = { workspace = true }
ethereum-types = { workspace = true }
hbbft = { workspace = true }
hex = { workspace = true }
primitives = { workspace = true }
rand = { workspace = true }
reward = { workspace = true }
ritelinked = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
signer = { workspace = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
uuid = { workspace = true }
vrrb_core = { workspace = true }
vrrb_vrf = { workspace = true }
