[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.2", features = ["rand"] }
sha256 = "1.0.2"
rand = { version = "0.6", features = ["std"] }
uuid = { version = "0.8.0", features = ["serde", "v4"] }
bytebuffer = "0.2.1"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
blake3 = "0.3.8"
pickledb = "0.5.1"
hex = "*"
thiserror = "1.0"
log = "0.4.14"
ritelinked = { version = "0.3.2", features = ['serde'] }
strum = "0.21.0"
strum_macros = "0.21.0"
block = { path = "../block" }
vrrb_lib = { path = "../vrrb_lib" }
commands = { path = "../commands" }
messages = { path = "../messages" }
reward = { path = "../reward" }
state = { path = "../state" }
verifiable = { path = "../verifiable" }
udp2p = { git = "https://github.com/ASmithOWL/udp2p", branch = "main" }
