[package]
name = "claim_concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "claim"
path = "src/lib.rs"


[dependencies]
secp256k1 = {version = "0.20.2", features = ["rand"]}
sha256 = "1.0.2"
hex = "*"
rand = {version = "0.6", features = ["std"]}
ritelinked = {version = "0.3.2", features = [ 'serde' ]}


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false 