[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Example of customizing binaries in Cargo.toml.

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
node = { workspace = true }
vrrb_config = { workspace = true }
vrrb_rpc = { workspace = true }
primitives = { workspace = true }
telemetry = { workspace = true }
storage = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vrrb_core = { workspace = true }
hbbft = { workspace = true }
sha256 = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
wallet = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
events = { workspace = true }
utils = { workspace = true }
hex = { workspace = true }
kademlia-dht = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
