[package]
name = "cli"
default-run = "versa"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "versa"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
faucet = { workspace = true }
tokio = { workspace = true }
node = { workspace = true }
vrrb_config = { workspace = true }
vrrb_rpc = { workspace = true }
primitives = { workspace = true }
telemetry = { workspace = true }
storage = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vrrb_core = { workspace = true }
hbbft = { workspace = true }
sha256 = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
config = "0.13"
wallet = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
events = { workspace = true }
utils = { workspace = true }
hex = { workspace = true }
kademlia-dht = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
