[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.0.2"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
hex = "*"
log = "0.4.14"
ritelinked = { version = "0.3.2", features = ['serde'] }
messages = { path = "../messages" }
udp2p = { git = "https://github.com/ASmithOWL/udp2p", branch = "main" }
