[package]
name = "compute_cli"
description = "Verstatus Compute Agent CLI"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "versa-compute"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
internal_rpc = { workspace = true }
clap = { workspace = true }
telemetry = { workspace = true }
service_config = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
platform = { workspace = true }
