[package]
name = "compute_cli"
description = "Verstatus Compute Agent CLI"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "versatus-compute"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
compute_runtime = { path = "../compute_runtime" }
env_logger = { workspace = true }
hyper = { workspace = true }
internal_rpc = { workspace = true }
lazy_static = { workspace = true }
platform = { workspace = true }
metric_exporter = { workspace = true }
tokio-util = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
service_config = { workspace = true }
telemetry = { workspace = true }
tokio = { workspace = true }
