[package]
name = "compute_runtime"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitmask-enum = { workspace = true }
derive_builder = { workspace = true }
oci-spec = "0.6"
telemetry = { workspace = true }
uds = "0.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
mktemp = "0.5"
