[package]
name = "compute_runtime"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitmask-enum = { workspace = true }
derive_builder = { workspace = true }
oci-spec = "0.6"
telemetry = { workspace = true }
uds = "0.4"
log = "0.4"
env_logger = "0.10"
mktemp = "0.5"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
flate2 = "1.0"
tar = "0.4"
walkdir = "2.4"
internal_rpc = { workspace = true }
service_config = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
