[package]
name = "dkg_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbbft = {git = "https://github.com/vrrb-io/hbbft", branch = "master"} 
thiserror = "1.0.32"
serde = "1.0.144"
rand = "0.6.5"
bincode = "1.3.3"
tokio = "1.20.1"
hex = "0.4.2"

#internal
node = { path = "../node" }
commands = { path = "../commands" }
messages = { path = "../messages" }
primitives = { path = "../primitives" }
vrrb_config = { path = "../vrrb_config" }
udp2p = { git = "https://github.com/ASmithOWL/udp2p", branch = "main" }
